--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
-    "name": "ғᴀʟʟᴇɴ ダ ᴍᴜsɪᴄ",
+    "name": "٭𝗠𝗨𝗦𝗜𝗖 ٭ 𝗫 ٭ 𝝙𝗥𝗜𝗔٭",
     "description": "A VC Player Bot for telegram videochats, written in Python with Pyrogram and Py-Tgcalls.",
-    "logo": "https://te.legra.ph/file/6f99c49bdb4679acad717.jpg",
+    "logo": "https://te.legra.ph/file/271e49fcbad299b75e7e0.jpg",
     "keywords": [
     "python3",
     "telegram",
-    "Fallen",
+    "Aria",
     "MusicBot",
     "telegram-bot",
     "pyrogram"
